# meeting_memo

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  asr.py  asr_worker.py  audio.py  config.py  db.py  export.py  llm.py  main.py  models.py  pipeline.py  templates_prompts.py  textproc.py
tests/: check_asr_url.py  check_dashscope.py  check_diar.py  check_funasr_real.py  check_hotword.py  check_hotword_many.py  check_local_upload.py  check_voiceprint.py  check_voiceprint_channel.py  check_voiceprint_e2e.py  show_result.py  smoke_fake.py
web/: app.js  index.html  style.css
