[project]
name = "meeting-memo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.22",
    "fastapi>=0.137.1",
    "funasr>=1.3.9",
    "imageio-ffmpeg>=0.6.0",
    "openai>=2.42.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "uvicorn[standard]>=0.49.0",
]
